--- a/src/composer.json
+++ b/src/composer.json
@@ -12,6 +12,8 @@
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.4",
+        "jrm2k6/cloudder": "0.4.*",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0"
