--- a/src/composer.json
+++ b/src/composer.json
@@ -14,12 +14,14 @@
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
         "jrm2k6/cloudder": "0.4.*",
+        "kanazaca/counter-cache": "^1.0",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
+        "beyondcode/laravel-er-diagram-generator": "^1.2",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
